@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-11-06T16:20:50Z",
+  "timestamp" : "2022-11-07T08:22:43Z",
   "count_outdated" : 641,
   "uniques_outdated" : 366,
-  "count" : 670,
+  "count" : 669,
   "uniques" : 380,
   "clones" : [
     {
       "timestamp": "2022-10-24T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
