@@ -1,3 +1,11 @@
+2022-11-07T08:22:43Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3408666147 # 1006
+* notice: last 14d: unq all: 5 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 366 641 / 380 670
+* notice: next accum: outdated-unq outdated-all / unq all: 366 641 / 380 669
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-10-24]
+
 2022-11-06T16:20:50Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3405094142 # 1004
 * notice: last 14d: unq all: 5 29
